toi sua title, h1

--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Webnhahang</title>
 </head>
 <body>
-    <h1>Tôi thử dùng Github</h1>
+    <h1>xay dung ban ve</h1>
+    <h6>co len ha ha</h6>
 </body>
 </html>
